<resources>
    <string name="app_name">TableSync</string>
    <string name="description">Четность недели считается особым методом. Если номер недели делится на два без остатка - это четная неделя, если нет - нечетная. Как правило,первая учебная неделя является нечетной, далее они чередуются.</string>
    <string name="week">Четная или нечетеая?</string>
    <string name="Date">Дата:</string>
    <string name="whataweek">Какая сейчас неделя:</string>
    <string name="telegram">Telegram: @artemy_mv</string>
    <string name="nextweek">Следующая неделя: </string>
    <string name="whennext">Начинатся </string>
    <string name="sample">образец</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="schedule">Расписание на сегодня</string>
    <string name="next_schedule">Расписание на завтра</string>
    <string name="time1">09:00–10:30</string>
    <string name="time2">10:40–12:10</string>
    <string name="time3">12:40–14:10</string>
    <string name="time4">14:30–16:00</string>
    <string name="time5">16:10–17:40</string>
    <string name="time6">17:50–19:20</string>
    <string name="table">образец</string>
</resources>