<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity"
    android:background="@drawable/gradient">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape2"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/main"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/next_schedule">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/time1"
            style="@style/description">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/schedule1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/table"
            style="@style/description"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout10"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/time2"
            style="@style/description"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:id="@+id/schedule2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/table"
            style="@style/description"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/description"
            android:text="@string/time3"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout9"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:id="@+id/schedule3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/table"
            style="@style/description"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout11"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            style="@style/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/time4"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout14"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout12"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout12"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:id="@+id/schedule4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/table"
            style="@style/description"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout13"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            style="@style/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/time5">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout14"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:id="@+id/schedule5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/table"
            style="@style/description"
            android:gravity="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout15"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/time6"
            style="@style/description">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:background="@drawable/shape2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout16"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16"
        app:layout_constraintVertical_bias="0.0">
        <TextView
            android:id="@+id/schedule6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/table"
            style="@style/description"
            android:gravity="center">
        </TextView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>